# fyredocs_backend

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  EsyDocs_API.postman_collection.json  Fyredocs_API.postman_collection.json  Makefile  README.md  SECURITY.md  deploy.bat  deploy.sh  docker-compose-cleanup.yml  docker-compose-convert-from-pdf.yml  docker-compose-convert-to-pdf.yml  docker-compose-job-service.yml  docker-compose.essentials.yml  docker-compose.yml  go.work  go.work.sum  package-lock.json  test.bat  test.sh
.github/: dependabot.yml
analytics-service/: Dockerfile  go.mod  go.sum  main.go
api-gateway/: .env.example  Dockerfile  go.mod  go.sum  main.go  main_test.go
auth-service/: Dockerfile  go.mod  go.sum  main.go
billing-service/: Dockerfile  go.mod  go.sum  main.go
cleanup-worker/: Dockerfile  go.mod  go.sum  main.go  main_test.go
cli/: README.md  go.mod  main.go
collab-service/: go.mod  go.sum  main.go  main_test.go
convert-from-pdf/: Dockerfile  go.mod  go.sum  main.go
convert-to-pdf/: Dockerfile  entrypoint.sh  go.mod  main.go
deployment/: .env.example  base-alpine-libreoffice.Dockerfile  base-go-builder.Dockerfile  build-base-image.sh  deploy.bat  deploy.sh  docker-compose-analytics-service.yml  docker-compose-api-gateway.yml  docker-compose-auth-service.yml  docker-compose-cleanup-worker.yml  (+12 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/fyredocs/: __init__.py  _apikeys.py  _billing.py  _client.py  _documents.py  _errors.py  _types.py  _usage.py
sdks/python/tests/: test_client.py
shared/: go.mod  (+1 more)
(+1075 files in other folders)
