[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fyredocs"
version = "0.1.0"
description = "Official Python SDK for the Fyredocs API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Fyredocs" }]
keywords = ["fyredocs", "pdf", "api", "sdk", "documents"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# Zero install-time runtime deps. Uses stdlib (urllib) for HTTP,
# dataclasses for types. Aligns with the TS SDK (fetch) and Go
# SDK (net/http) — none of the three pull in a third-party HTTP
# client at install time.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://fyredocs.com"
Documentation = "https://fyredocs.com/docs/sdk/python"
Source = "https://github.com/fyredocs/fyredocs"

[tool.hatch.build.targets.wheel]
packages = ["src/fyredocs"]
